--- a/index.html
+++ b/index.html
@@ -14,78 +14,106 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">  -->
     <title>青年大学习</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/loading.css">
 </head>
 
 <body>
-    <div class="container">
-        <!-- header begin -->
-        <div class="header">
-            <!-- 背景 -->
-            <div class="bg-img" id="bg-pre">
-                <!-- accept: 可以接受gif,jpeg,png,jpg的格式 -->
-                <input type="file" name="bg" id="bg-ipt" value="" accept="image/gif, image/jpeg, image/png, image/jpg">
-            </div>
-            <!-- 大头像 -->
-            <input type="text" name="大网名" value="余生少年" class="name name-b" id='nickName-b'>
-            <div id="avatar-pre-b">
-                <input type="file" name="avatar-b" id="ava-ipt-b" value="" accept="image/gif, image/jpeg, image/png, image/jpg">
-            </div>
-        </div>
-
-        <!-- mid begin -->
-        <div class="mid">
-            <div class="line line1"></div>
-            <span class="new" id="longPress">朋友的新动态</span>
-            <div class="line line2"></div>
-        </div>
-
-        <div class="body">
-            <!-- 小头像 -->
-            <div id="avatar-pre-s">
-                <input type="file" name="avatar-s" id="ava-ipt-s" value="" accept="image/gif, image/jpeg, image/png, image/jpg">
-            </div>
-            <!-- 内容 -->
-            <input type="text" name="" value="余生少年" class="name name-s" id='nickName-s'>
-            <div class="tit">
-                <textarea rows="4" cols="" id="mainContent">XXXX学院 &#10;XXXXXXX-XX XXXX &#10;已完成“青年大学习”网上主题团课第五季第八期的课程</textarea>
-            </div>
-
-            <div class="article">
-                <div class="cover"></div>
-                <div class="content">
-                    <textarea rows="4" cols="" id="detailContent">我完成了“青年大学习”网上主题团课第五季第八期的课程，你也来试试吧</textarea>
+    <div id="picture">
+        <div class="container">
+            <!-- header begin -->
+            <div class="header">
+                <!-- 背景 -->
+                <div class="bg-img" id="bg-pre">
+                    <!-- accept: 可以接受gif,jpeg,png,jpg的格式 -->
+                    <input type="file" name="bg" id="bg-ipt" value="" accept="image/gif, image/jpeg, image/png, image/jpg">
+                </div>
+                <!-- 大头像 -->
+                <input type="text" name="大网名" value="余生少年" class="name name-b" id='nickName-b'>
+                <div id="avatar-pre-b">
+                    <input type="file" name="avatar-b" id="ava-ipt-b" value="" accept="image/gif, image/jpeg, image/png, image/jpg">
                 </div>
             </div>
 
-            <p class="delete" onclick="alert('我删除你个头')">1分钟前 &nbsp;<i>删除</i></p>
+            <!-- mid begin -->
+            <div class="mid">
+                <div class="line line1"></div>
+                <span class="new" id="longPress">朋友的新动态</span>
+                <div class="line line2"></div>
+            </div>
 
-            <div class="point">
-                <span></span>
-                <span></span>
+            <div class="body">
+                <!-- 小头像 -->
+                <div id="avatar-pre-s">
+                    <input type="file" name="avatar-s" id="ava-ipt-s" value="" accept="image/gif, image/jpeg, image/png, image/jpg">
+                </div>
+                <!-- 内容 -->
+                <input type="text" name="" value="余生少年" class="name name-s" id='nickName-s'>
+                <div class="tit">
+                    <textarea rows="4" cols="" id="mainContent-textarea" onblur="saveMainMsg()" class="display-none">XXXX学院 &#10;XXXXXXX-XX XXXX &#10;已完成“青年大学习”网上主题团课第五季第八期的课程</textarea>
+                    <div onclick="setMainMsg()" id="mainContent-div" class="">
+                        XXXX学院<br> XXXXXXX-XX XXXX <br> 已完成“青年大学习”网上主题团课第五季第八期的课程
+                    </div>
+                </div>
+
+                <div class="article">
+                    <div class="cover">
+                        <img src="" alt="" width="100%" id="cover">
+                    </div>
+                    <div class="content">
+                        <textarea rows="4" cols="" id="detailContent-textarea" onblur="saveDetailMsg()" class="display-none">我完成了“青年大学习”网上主题团课第五季第八期的课程，你也来试试吧</textarea>
+                        <div onclick="setDetailMsg()" id="detailContent-div" class="">
+                            我完成了“青年大学习”网上主题团课第五季第八期的课程，你也来试试吧
+                        </div>
+                    </div>
+                </div>
+
+                <p class="delete">1分钟前 &nbsp;<i onclick="alert('我删除你个头')">删除</i></p>
+
+                <div class="point">
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+
+            <div class="bottom" id="bottom">
+                <div>
+                    <span>文件名:</span>
+                    <input type="text" value="12312" id="fileName" onchange="storageData()">
+                    <button onclick="savePic()" class="saveBtn">保存图片</button>
+                </div>
+            </div>
+        </div>
+        <!-- 模式框 -->
+        <div class="modal" id='modal'>
+            <div class="zhezhao"></div>
+            <div class="tankuang">
+                <div id="header">
+                    <span>说明</span>
+                </div>
+                <div class="content">
+                    <ol>
+                        <li>本网站是为了懒人们服务的，由于学校经常需要共青团学习的截图，因此，随手做了一个网站，方便大家使用.</li>
+                        <li>该网站的背景图和头像是随机生成的，并且支持手机相册上传！</li>
+                        <li>网站内所有的文字均支持更改！</li>
+                        <li>网站支持本地保存，相册上传的图片和更改的文字将会在本地保存！</li>
+                        <li>点击“朋友的新动态”即可清除本地缓存</li>
+                        <li>点击“保存图片”即可保存至本地</li>
+                    </ol>
+                </div>
+                <div id="header-right" onclick="hidder()">我知道了</div>
             </div>
         </div>
     </div>
-    <!-- 模式框 -->
-    <div class="modal" id='modal'>
-        <div class="zhezhao"></div>
-        <div class="tankuang">
-            <div id="header">
-                <span>说明</span>
-            </div>
-            <div class="content">
-                <ol>
-                    <li>本网站是为了懒人们服务的，由于学校经常需要共青团学习的截图，因此，随手做了一个网站，方便大家使用.</li>
-                    <li>该网站的背景图和头像是随机生成的，并且支持手机相册上传！</li>
-                    <li>网站内所有的文字均支持更改！</li>
-                    <li>网站支持本地保存，相册上传的图片和更改的文字将会在本地保存！</li>
-                    <li>点击“朋友的新动态”即可清除本地缓存</li>
-                </ol>
-            </div>
-            <div id="header-right" onclick="hidder()">我知道了</div>
+
+    <div class="display-none" id="loaderBox">
+        <div id="loader" class="overlay-loader">
+            <div class="loader-background color-flip" style="border-radius: 10px;"></div>
+            <img class="loader-icon spinning-cog" src="https://chenmo1212.site/images/yang/cog21.svg">
         </div>
     </div>
-
 </body>
+
 <script src="js/main.js"></script>
+<script src="js/html2canvas.js"></script>
 
 </html>
