--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       </div>
       <!-- 内容 -->
       <input type="text" name="" value="余生少年" class="name name-s" id='nickName-s'>
-      <div class="tit">
-        <textarea rows="4" cols="" id="mainContent" style="margin: 0px;width: 283px;height: 80px;">
+      <div class="content-main">
+        <textarea rows="4" cols="" id="mainContent" style="margin: 0px;width: 90%;height: 80px;">
         	XXXX学院 &#10;XXXXXXX-XX XXXX &#10;已完成“青年大学习”网上主题团课第八季第八期的课程</textarea>
       </div>
 
