--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body id="max-control">
-  <div class="container">
+  <div class="container" id="container">
     <!-- header begin -->
     <div class="header">
       <!-- 背景 -->
@@ -27,7 +27,7 @@
     <!-- mid begin -->
     <div class="mid">
       <div class="line line1"></div>
-      <span class="new" id="longPress">朋友的新动态</span>
+      <span class="new" onclick="showPicModal()">朋友的新动态</span>
       <div class="line line2"></div>
     </div>
 
@@ -46,11 +46,11 @@
       <div class="article">
         <div class="cover"></div>
         <div class="content">
-          <textarea rows="4" cols="" id="detailContent">满分！我完成了“青年大学习”网上主题团课第八季第八期的课程，你也来试试吧</textarea>
+          <textarea rows="2" cols="" id="detailContent">满分！我完成了“青年大学习”网上主题团课第八季第八期的课程，你也来试试吧</textarea>
         </div>
       </div>
 
-      <p class="delete" onclick="alert('我删除你个头')">1分钟前 &nbsp;<i>删除</i></p>
+      <p class="delete" id="longPress">1分钟前 &nbsp;<i>删除</i></p>
 
       <div class="point">
         <span></span>
@@ -59,11 +59,9 @@
 
       <div class="divider"></div>
 
-      <!-- 小头像 -->
-      <div id="avatar-pre-s">
-        <img style="height: 4rem;width: 4rem;border-radius: 3px;" src="https://shouyou.3dmgame.com/uploadimg/ico/2017/0729/1501308877476697.jpg" alt="">
-      </div>
-        <!-- 内容 -->
+      <!-- 一言小头像 -->
+      <div class="motto-avatar"></div>
+      <!-- 内容 -->
       <div class="name name-s" id='nickName-s'><a href="http://www.hitokoto.cn/" style="text-decoration: none; color: #454545;" target="_Blank">一言</a></div>
       <div class="motto" onclick="getHitokoto()">
         <p id="hitokoto">:D 获取中...</p>
@@ -73,25 +71,47 @@
     <!-- 模式框 -->
     <div class="modal" id='modal'>
       <div class="zhezhao"></div>
-      <div class="tankuang">
+      <div class="tankuang" id="tankuang">
         <div id="header">
-            <span>说明</span>
+          <span>说明</span>
         </div>
         <div class="content">
-            <ol>
-                <li>本网站是为了懒人们服务的，由于学校经常需要共青团学习的截图，因此，随手做了一个网站，方便大家使用。</li>
-                <li>该网站的背景图和头像是随机生成的，并且支持手机相册上传！</li>
-                <li>网站内所有的文字均支持更改！</li>
-                <li>网站支持本地保存，相册上传的图片和更改的文字将会在本地保存！</li>
-                <li>点击“朋友的新动态”即可清除本地缓存。</li>
-                <li>注意：该网站只是可以不用转发朋友圈，务必看完视频答题后再使用该网站，别给你们团支书找麻烦。</li>
-            </ol>
+          <ol>
+            <li>本网站是为了懒人们服务的，由于学校经常需要共青团学习的截图，因此，随手做了一个网站，方便大家使用。</li>
+            <li>该网站的背景图和头像是随机生成的，并且支持手机相册上传！</li>
+            <li>网站内所有的文字均支持更改！</li>
+            <li>网站支持本地保存，相册上传的图片和更改的文字将会在本地保存！</li>
+            <li>长按“删除”即可清除本地缓存。</li>
+            <li>注意：该网站只是可以不用转发朋友圈，务必看完视频答题后再使用该网站，别给你们团支书找麻烦。</li>
+          </ol>
         </div>
         <div id="header-right" onclick="hidder()">我知道了</div>
       </div>
     </div>
+
+    <!-- 生成图片模式框 -->
+    <div class="pic_modal" id='pic_modal' style="display: none;">
+      <div class="zhezhao"></div>
+      <div class="tankuang" id="tankuang">
+        <div id="header">
+          <span>说明</span>
+        </div>
+        <div class="content">
+          <ul style="list-style: none; margin-top: 2rem;">
+            <li>本功能可以将图片直接下载到您的设备，但目前存在一些未修复的bug，确定要继续吗？</li>
+          </ul>
+        </div>
+        <div class="btn">
+            <span onclick="hidder()">算了</span>
+            <span onclick="takeScreenshot()">继续</span>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 </body>
+<script src="https://cdn.bootcdn.net/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
 <script src="js/main.js"></script>
 <!-- 现代写法，推荐(不支持 IE) -->
 <script>
@@ -112,6 +132,7 @@
   var timeId = setInterval(function() {
     getHitokoto()
   }, 8000)
+
 </script>
 
 </html>
