--- a/index.html
+++ b/index.html
@@ -107,13 +107,11 @@
         </div>
       </div>
     </div>
-
-    <!-- Footer -->
-    <footer id="footer" style="position: absolute; bottom: 10px;z-index:10; width: 100%;">
-      <p style="text-align: center; font-size: 1.2rem;">&copy;<a href="https://chenmo1212.site">ChenMo</a> | <a href="http://beian.miit.gov.cn/">鄂ICP备19020558号</a> | <a href="https://github.com/Chenmo1212/study">Github</a>.</p>
-    </footer>
-
   </div>
+  <!-- Footer -->
+  <footer id="footer" style="background-color: #fff;position: absolute;bottom: -30px;z-index: 10;width: 100%;padding: 10px 0;">
+    <p style="text-align: center; font-size: 1.2rem;">&copy;<a href="https://chenmo1212.site">ChenMo</a> | <a href="http://beian.miit.gov.cn/">鄂ICP备19020558号</a> | <a href="https://github.com/Chenmo1212/study">Github</a>.</p>
+  </footer>
 </body>
 <script src="https://cdn.bootcdn.net/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
 <script src="js/main.js"></script>
