--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <div id="avatar-pre-b">
         <input type="file" name="avatar-b" id="ava-ipt-b" value="" accept="image/gif, image/jpeg, image/png, image/jpg">
       </div>
+      <!-- 小相机 -->
+      <div class="camera"><img src="https://study.chenmo1212.site/images/camera.png" alt=""></div>
     </div>
 
     <!-- mid begin -->
@@ -164,26 +166,6 @@
     getHitokoto()
   }, 8000)
 
-
-  function showToast(msg, duration) {
-    duration = isNaN(duration) ? 3000 : duration;
-    var m = document.createElement('div');
-    m.innerHTML = msg;
-    m.style.cssText = "width:80%; min-width:180px; max-width:360px;background:#000; opacity:0.8; height:auto;min-height: 30px; color:#fff; line-height:30px; text-align:center; border-radius:4px; position:fixed; top:80%; left:50%;margin-left: -40%; z-index:999999;";
-    document.body.appendChild(m);
-    setTimeout(function() {
-      var d = 0.1;
-      m.style.webkitTransition = '-webkit-transform ' + d + 's ease-in, opacity ' + d + 's ease-in';
-      m.style.opacity = '0';
-      setTimeout(function() {
-        document.body.removeChild(m)
-      }, d * 1000);
-    }, duration);
-  }
-
-  function clickme() {
-    showToast("恭喜您！请求数据成功！请求数据成功！", 5000);
-  }
 </script>
 
 </html>
