add camera icon

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <input type="file" name="avatar-b" id="ava-ipt-b" value="" accept="image/gif, image/jpeg, image/png, image/jpg">
       </div>
       <!-- 小相机 -->
-      <div class="camera"><img src="https://study.chenmo1212.site/images/camera.png" alt=""></div>
+      <div class="camera"><img src="https://study.chenmo1212.site/images/camera.png" alt="" onclick="showPicModal()"></div>
     </div>
 
     <!-- mid begin -->
@@ -85,6 +85,7 @@
             <li>网站内所有的文字均支持更改！</li>
             <li>网站支持本地保存，相册上传的图片和更改的文字将会在本地保存！</li>
             <li>长按“删除”即可清除本地缓存。</li>
+            <li style="color: #f56c6c;">点击“相机”图标即可保存图片。</li>
             <li>注意：该网站只是可以不用转发朋友圈，<span style="color: #f56c6c;">务必进入公众号签到后再使用该网站</span>，别给你们团支书找麻烦。</li>
           </ol>
         </div>
